<resources>
    <string name="app_name">ToDo</string>
    <string name="app_slogan">We’ve done the hard work for you and thought up co</string>
    <string name="task_list">Quản lý</string>
    <string name="search">Tìm kiếm</string>
    <string name="user">Người dùng</string>
    <string name="createListDrawer">Danh sách mới</string>
    <string name="createListFilterDrawer">Danh sách bộ lọc mới</string>
    <string name="editListDrawer">Chỉnh sửa danh sách</string>
    <string name="page_title">To Do</string>
    <string name="favorite">Yêu thích</string>
    <string name="searchBar">Tìm kiếm</string>
    <string name="more">Thêm</string>
    <string name="content_description_favorite">List yêu thích của bạn</string>
    <string name="content_description_search">Tìm kiếm</string>
    <string name="content_description_more">Thêm</string>
    <string name="header_title_Drawer">TASK CỦA BẠN NÈ</string>
    <string name="recentlyListTextDrawer"></string>
    <string name="stickListDrawer">Nhãn</string>
    <string name="deleteListDrawer">Các mục đã xóa</string>
    <string name="accountVIPDrawer">Nâng cấp lên Bản cao cấp</string>
    <string name="donationDrawer">Đóng góp</string>
    <string name="helpDrawer">Trợ giúp</string>
    <string name="settingDrawer">Cài đặt</string>
    <string name="changePass">Đổi mật khẩu</string>
    <string name="logoutDrawer">Đăng xuất</string>
    <string name="delete">Xoá</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>